--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,12 +10,14 @@
   "theme_color": "#ffffff",
   "icons": [
     {
-      "src": "/vite.svg",
-      "type": "image/svg+xml"
+      "src": "android-launchericon-192-192.png",
+      "type": "image/png",
+      "sizes": "192x192"
     },
     {
-      "src": "/favicon.ico",
-      "type": "image/x-icon"
+      "src": "android-launchericon-515-512.png",
+      "type": "image/png",
+      "sizes": "512x512"
     }
   ],
   "id": "cf222",
