--- a/public/manifest.json
+++ b/public/manifest.json
@@ -18,6 +18,18 @@
       "src": "android-launchericon-515-512.png",
       "type": "image/png",
       "sizes": "512x512"
+    },
+    {
+      "src": "LargeTile.scale-100.png",
+      "type": "image/png"
+    },
+    {
+      "src": "SmallTile.scale-100.png",
+      "type": "image/png"
+    },
+    {
+      "src": "SplashScreen.scale-100.png",
+      "type": "image/png"
     }
   ],
   "id": "cf222",
